--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "": "web3-redux-example",
+  "name": "web3-redux-example",
   "version": "0.0.1",
   "description": "",
   "author": "Chris Hitchcott <hitchcott@gmail.com> (http://hitchcott.com)",
